# skill-manager

./: LICENSE  README.md  ROADMAP.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
patches/: @radix-ui__themes@3.3.0.patch
skills/hello-world/: SKILL.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git_source.rs  lib.rs  main.rs  rule_target.rs  tray.rs
