[package]
name = "skill-manager"
version = "0.1.0"
description = "A small desktop app for installing and removing agent skills"
authors = ["Jacob Ragsdale"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skill_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
dirs = "6"
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tar = { version = "0.4", default-features = false }
tauri-plugin-dialog = "2.7.2"

[dev-dependencies]
tempfile = "3"
